examples/test/testpolicy4602.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4602
  namespace: namespace311
spec:
  podSelector:
    matchLabels:
      key49: value8
      key26: value11
      key0: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value16
          key30: value20
          key1: value20
      podSelector:
        matchLabels:
          key20: value10
          key15: value24
